--- a/EX10.md
+++ b/EX10.md
@@ -1,5 +1,5 @@
 # EX 10: Simulating Clustering using WEKA Data mining and Analysis Tool
-## Date: 
+## Date: 13/10/2023
 ## AIM:
 To perform a classification technique using WEKA tool
 ## WEKA:
